Bug #142996 fix: [Item form-frontend]- UI defect. All the fields should be properly aligned

--- a/src/components/com_tjucm/administrator/assets/css/tjucm.css
+++ b/src/components/com_tjucm/administrator/assets/css/tjucm.css
@@ -29,3 +29,8 @@
 .other-filters{
     padding: 0 14px;
 }
+
+/* CSS for frontend*/
+#item-form .radio input{
+      margin-left:5px !important;
+}
